--- a/index.html
+++ b/index.html
@@ -5,40 +5,93 @@
   <title>Post de LinkedIn - José Nagahata</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       max-width: 800px;
       margin: auto;
       padding: 2rem;
-      line-height: 1.6;
-      background-color: #f9f9f9;
-      display: none; /* Oculta todo por defecto */
+      background-color: #f4f6f8;
+      display: none;
     }
-    h1 { color: #333; }
-    img {
-      max-width: 100%;
-      margin-top: 1rem;
-      border-radius: 8px;
+
+    h1 {
+      color: #1a1a1a;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
     }
+
+    p {
+      font-size: 1rem;
+      color: #333;
+    }
+
     textarea {
       width: 100%;
-      height: 400px;
+      height: 380px;
       margin-top: 1rem;
       font-family: inherit;
       font-size: 1rem;
       padding: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.06);
+      background-color: #fff;
+      transition: box-shadow 0.2s ease-in-out;
+    }
+
+    textarea:focus {
+      outline: none;
+      border-color: #0066cc;
+      box-shadow: 0 0 0 3px rgba(0, 102, 204, 0.2);
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #0066cc;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .btn:hover {
+      background-color: #004da1;
+    }
+
+    .success-msg {
+      margin-top: 1rem;
+      color: #2e7d32;
+      font-weight: bold;
+      display: none;
+    }
+
+    img {
+      margin-top: 2rem;
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
   </style>
   <script>
-    // Protección por contraseña
     const accesoPermitido = prompt("🔐 Ingrese la contraseña para acceder:");
     const claveCorrecta = "transformacion2025";
 
     if (accesoPermitido === claveCorrecta) {
-      document.addEventListener("DOMContentLoaded", function() {
-        document.body.style.display = "block"; // Muestra el contenido
+      document.addEventListener("DOMContentLoaded", () => {
+        document.body.style.display = "block";
       });
     } else {
       document.write("<h2 style='text-align:center;margin-top:100px;'>⛔ Acceso denegado</h2><p style='text-align:center;'>Contraseña incorrecta o cancelada.</p>");
+    }
+
+    function guardarCambios() {
+      const texto = document.getElementById("postTexto").value;
+      localStorage.setItem("borradorPostJose", texto);
+      document.getElementById("mensajeExito").style.display = "block";
     }
   </script>
 </head>
@@ -46,7 +99,7 @@
   <h1>☕ Post de LinkedIn: Café con José Nagahata</h1>
 
   <p>Texto editable del post:</p>
-  <textarea>
+  <textarea id="postTexto">
 ☕ Cuando una conversación redefine tu perspectiva sobre transformación organizacional
 
 Hoy tuve el privilegio de compartir café y conocimientos con José Nagahata, un líder cuya experiencia en datos, procesos y tecnología ofrece una perspectiva única sobre el cambio organizacional real.
@@ -71,9 +124,12 @@ Gracias, José, por compartir tu experiencia y perspectiva.
 #TransformaciónDigital #Liderazgo #DatosProcesos #NetworkingEstratégico #InteligenciaArtificial #Automatización #GestiónDelCambio
   </textarea>
 
+  <button class="btn" onclick="guardarCambios()">✅ Guardar cambios</button>
+  <p id="mensajeExito" class="success-msg">✔️ Cambios guardados correctamente (localmente)</p>
+
   <h2>Imagen del post:</h2>
   <img src="post-jose-nagahata.jpg" alt="Imagen del post">
 
-  <p>✉️ Puedes editar el texto anterior directamente. Si deseas sugerir cambios, guarda el contenido y compártelo por mensaje privado.</p>
+  <p>✉️ Puedes editar el texto anterior directamente. Al hacer clic en "Guardar cambios", se guardará en tu navegador (localmente).</p>
 </body>
 </html>
