--- a/index.html
+++ b/index.html
@@ -51,18 +51,13 @@ Gracias, José, por compartir tu experiencia y perspectiva.
       const contenido = document.getElementById("contenido").value;
       const msg = document.getElementById("msg");
 
-      const response = await fetch("https://api.github.com/repos/IbarracoGroup/posts-2025-07-networking-transformacion-digital-jose-nagahata-/dispatches", {
+      const response = await fetch("https://backend-post-jose.gibarra.workers.dev", {
         method: "POST",
         headers: {
-          "Accept": "application/vnd.github+json",
-          "Authorization": "Bearer GH_PAT",  // 👈 Aquí reemplaza por tu verdadero secreto (solo si pruebas en local)
-          "X-GitHub-Api-Version": "2022-11-28"
+          "Content-Type": "application/json"
         },
-        body: JSON.stringify({
-          event_type: "guardar_revision",
-          client_payload: { texto: contenido }
-        })
-      });
+        body: JSON.stringify({ texto: contenido })
+        });
 
       if (response.ok) {
         msg.innerText = "✔️ Revisión enviada correctamente a GitHub. Se generará un archivo .txt automático.";
