--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>📥 Revisión del Post – José Nagahata</title>
+  <title>📥 Revisión del Post – Jose Nagahata</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
@@ -107,7 +107,7 @@
 <body>
   <div class="container">
     <div class="hero">
-      <h1>☕ Revisión de Post: Café con José Nagahata</h1>
+      <h1>☕ Revisión de Post: Café con Jose Nagahata</h1>
       <p>Reflexión privada sobre transformación organizacional, procesos, tecnología y personas</p>
     </div>
 
@@ -116,7 +116,7 @@
       <textarea id="contenido">
 ☕ Cuando una conversación redefine tu perspectiva sobre transformación organizacional
 
-Esta mañana tuve el privilegio de compartir café con José Nagahata, cuya experiencia en datos, procesos y tecnología me dejó reflexiones que van mucho más allá de lo técnico.
+Hace unos días tuve el privilegio de compartir café con Jose Nagahata, cuya experiencia en datos, procesos y tecnología me dejó reflexiones que van mucho más allá de lo técnico.
 
 💡 La ecuación que cambió mi perspectiva:
 Transformación exitosa = Procesos + Tecnología + Personas (en ese orden de importancia)
@@ -136,7 +136,7 @@ Transformación exitosa = Procesos + Tecnología + Personas (en ese orden de imp
 🧠 El momento revelador:
 Entender que en la era de la IA, las conversaciones humanas profundas siguen siendo la fuente más poderosa de aprendizaje y transformación.
 
-Gracias José por una conversación genuina donde compartiste no solo conocimiento técnico, sino tu visión estratégica sobre cómo conectar personas, procesos y tecnología para generar valor real.
+Gracias Jose por una conversación genuina donde compartiste no solo conocimiento técnico, sino tu visión estratégica sobre cómo conectar personas, procesos y tecnología para generar valor real.
 
 👉 ¿Has vivido alguna conversación que te haya cambiado la perspectiva sobre tu industria? Me encantaría conocer tu experiencia.
 
